--- a/translations/messages.de.xlf
+++ b/translations/messages.de.xlf
@@ -26,6 +26,10 @@
                 <source>Invalid credentials.</source>
                 <target>Ungültige Anmeldedaten.</target>
             </trans-unit>
+            <trans-unit id="form.name">
+                <source>Name</source>
+                <target>Name</target>
+            </trans-unit>
             <trans-unit id="form.username">
                 <source>Username</source>
                 <target>Benutzername</target>
@@ -33,6 +37,26 @@
             <trans-unit id="form.password">
                 <source>Password</source>
                 <target>Passwort</target>
+            </trans-unit>
+            <trans-unit id="register.team.add">
+                <source>Add Team</source>
+                <target>Team hinzufügen</target>
+            </trans-unit>
+            <trans-unit id="register.team.success">
+                <source>Congratulation! You registered your team successful.</source>
+                <target>Gratulation! Du hast dein Team erfolgreich registriert.</target>
+            </trans-unit>
+            <trans-unit id="register.team.not_found">
+                <source>No active tournament found</source>
+                <target>Kein aktives Turnier gefunden</target>
+            </trans-unit>
+            <trans-unit id="register.team.already_registered">
+                <source>Your team is already registered!</source>
+                <target>Dein Team ist bereits registriert!</target>
+            </trans-unit>
+            <trans-unit id="register.team.already_exists">
+                <source>Team already exists!</source>
+                <target>Team existiert bereits!</target>
             </trans-unit>
         </body>
     </file>
