--- a/translations/messages.de.xlf
+++ b/translations/messages.de.xlf
@@ -190,6 +190,14 @@
                 <source>Result</source>
                 <target>Resultat</target>
             </trans-unit>
+            <trans-unit id="schedule.msg-error">
+                <source>Can not create schedule, it already exists.</source>
+                <target>Kann den Spielplan nicht erstellen, da dieser bereits exisiert.</target>
+            </trans-unit>
+            <trans-unit id="schedule.msg-error-show-schedules">
+                <source>Show schedules</source>
+                <target>Spielpläne anzeigen</target>
+            </trans-unit>
             <trans-unit id="standing.show_standing">
                 <source>Show Standing</source>
                 <target>Tabelle anzeigen</target>
