implement ajax request

--- a/translations/messages.de.xlf
+++ b/translations/messages.de.xlf
@@ -290,6 +290,22 @@
                 <source>Logout</source>
                 <target>Abmelden</target>
             </trans-unit>
+            <trans-unit id="action.copyLink">
+                <source>Copy Link</source>
+                <target>Link kopieren</target>
+            </trans-unit>
+            <trans-unit id="modal.clipboard">
+                <source>Clipboard</source>
+                <target>Clipboard</target>
+            </trans-unit>
+            <trans-unit id="modal.ChangedResultTitle">
+                <source>Result Changed</source>
+                <target>Resultat hat gewechselt!</target>
+            </trans-unit>
+            <trans-unit id="modal.Result">
+                <source>Result</source>
+                <target>Resultat</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
